[package]
name = "pinns"
version = "0.1.0"
authors = ["Sascha Grunert <sgrunert@suse.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/saschagrunert/pinns.rs"

[dependencies]
anyhow = "1.0.26"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
env_logger = "0.7.1"
getset = "0.1.0"
log = { version = "0.4.8", features = ["serde", "std"] }
nix = "0.17.0"
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1.0.26"

[dev-dependencies]
tempfile = "3.1.0"
